Fix: overflow issue in mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@ body {
   font-feature-settings: "cv11", "ss01";
   font-variation-settings: "opsz" 32;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
